--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "weather-app2",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.4",
+    "bootstrap": "^5.3.6",
+    "jquery": "^3.7.1",
+    "jquery-blockui": "^2.7.0",
+    "jquery-ui": "^1.14.1",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
